2007-07-04  Lorenzo Natale <nat@liralab.it>
	* conf/CMakeLists.txt
	* conf/YARPCompileModules.txt
	* src/yarpdev/CMakeLists.txt
      External modules support. CMake was not setting dependencies
	between libraries correctly (build all failed if external libs
	were not manually compiled beforehand). Now fixed.

2007-06-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/LocalCarrier.h: improvements
	to local carrier shutdown procedure.

2007-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze version 2.1.5

	* src/libYARP_OS/src/Property.cpp: make an exception to
	the processing of backslash symbols when reading command
	line options, to make it easier for Windows people to
	pass filenames.

	* src/libYARP_OS/include/yarp/ShmemCarrier.h: don't use
	member templates, Visual Studio 6 unhappy.

2007-06-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/ShmemHybridStream.h: switched
	"shmem" carrier to be a name for Alessandro's new
	implementation.  To get the old carrier, use "shmem1".
	So something like "yarp write /write shmem://read" will
	connect using the new shmem implementation from today.

2007-05-29  Alessandro Scalzo <ale@liralab.it>
	* src/libYARP_OS/include/yarp/ShmemHybridStream.h, 
	src/libYARP_OS/src/ShmemHybridStream.cpp: added a new
	two way communication stream based on shared memory.
	Synchronization obtained by socket. It has the same
	interface as ShmemTwoWayStream. Now adapts the
	buffer size at runtime. Tested.

2007-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpCompileModules.cmake: modify Lorenzo's method
	for adding external modules into libYARP_dev so that it
	can also be used to compile modules completely outside
	of the YARP library (a bit like kernel modules).
	Updated "yarp cmake" cmake file to reflect these changes.

2007-05-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/LocalCarrier.h: new and better