@@ -41,10 +41,11 @@ IF (CREATE_GUIS)
   IF (NOT GtkPlus_FOUND)
 	MESSAGE(STATUS " gtk+ not found, won't compile dependent tools")
   ENDIF (NOT GtkPlus_FOUND)
-  FIND_PACKAGE(GtkMM)
-  IF(NOT GtkMM_FOUND)
-        MESSAGE(STATUS " gtkmm not found, won't compile dependent tools")
-  ENDIF(NOT GtkMM_FOUND)
+# GtkMM dependencies moving to iCub
+#  FIND_PACKAGE(GtkMM)
+#  IF(NOT GtkMM_FOUND)
+#        MESSAGE(STATUS " gtkmm not found, won't compile dependent tools")
+#  ENDIF(NOT GtkMM_FOUND)
 ENDIF (CREATE_GUIS)
 
 SET(YARP_DEFINES "${YARP_DEFINES_ACCUM}" CACHE STRING "Definitions needed when compiling with YARP")
