@@ -1,18 +1,0 @@
-# set up to use GTKMM
-
-ADD_DEFINITIONS(${GTKMM_C_FLAGS})
-LINK_LIBRARIES(${GTKMM_LINK_FLAGS})
-INCLUDE_DIRECTORIES(${GTKMM_INCLUDE_DIR})
-
-# set up to use libYARP_*
-SET(NEED_LIBS YARP_OS YARP_sig YARP_dev)
-
-IF (WIN32 AND NOT CYGWIN)
-  YarpProgram(yarpfggui CONSOLE)
-  INSTALL_TARGETS(/bin yarpfggui)
-  SET_TARGET_PROPERTIES(yarpfggui PROPERTIES COMPILE_FLAGS /wd4250)
-ELSE (WIN32 AND NOT CYGWIN)
-  YarpProgram(yarpfggui CONSOLE)
-  INSTALL_TARGETS(/bin yarpfggui)
-ENDIF (WIN32 AND NOT CYGWIN)
-
