@@ -1,0 +1,4 @@
+
+This GUI has been moved to the iCub repository.
+
+Search google for "Getting RobotCub".
